[package]
description = "Tower is a framework to build services agnostic of the network protocol.s"
edition = "2021"
name = "tower_explorer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3.19"
hyper = {version = "0.14.16", features = ["server", "tcp", "client", "http1"]}
log = "0.4"
pin-project = "1.0.10"
rand = "0.8.4"
serde_json = "1.0.79"
tokio = {version = "1.0", features = ["full"]}
tower = "0.4.11"
